// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot mfaCredentials default 1`] = `
<div
  className="sc-Axmtr jBZtfl"
>
  <div>
    <div
      className="sc-fzqNJr kkyjJK"
    >
      <div>
        <div
          className="sc-AxirZ sc-AxiKw fAiBCP"
        >
          mfa.email.explain
        </div>
        <form
          className="sc-fzqBZW hrtIKw"
          noValidate={true}
          onSubmit={[Function]}
        >
          <button
            className="sc-fzokOt iaSrde"
            data-testid="submit"
            disabled={false}
            type="submit"
          >
            mfa.register.email
          </button>
        </form>
      </div>
      <div
        className="sc-AxhUy ihriO"
      >
        <span />
      </div>
      <div>
        <div
          className="sc-AxirZ sc-AxiKw fAiBCP"
        >
          mfa.phoneNumber.explain
        </div>
        <form
          className="sc-fzqBZW hrtIKw"
          noValidate={true}
          onSubmit={[Function]}
        >
          <div
            className="sc-fzoLsD mtFrt"
          >
            <label
              className="sc-fzozJi dEjaXT"
              htmlFor="phone_number"
            >
              phoneNumber
            </label>
            <input
              className="sc-fzpans cUAEYx"
              data-testid="phone_number"
              id="phone_number"
              name="phone_number"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="phoneNumber"
              required={true}
              title="phoneNumber"
              type="tel"
              value=""
            />
          </div>
          <button
            className="sc-fzokOt iaSrde"
            data-testid="submit"
            disabled={false}
            type="submit"
          >
            mfa.register.phoneNumber
          </button>
        </form>
      </div>
    </div>
    <div
      className="sc-fzqNJr kkyjJK"
    >
      <div>
        <div
          className="sc-AxirZ sc-AxiKw fAiBCP"
        >
          mfa.email.remove.explain
        </div>
        <form
          className="sc-fzqBZW hrtIKw"
          noValidate={true}
          onSubmit={[Function]}
        >
          <button
            className="sc-fzokOt iaSrde"
            data-testid="submit"
            disabled={false}
            type="submit"
          >
            mfa.remove.email
          </button>
        </form>
      </div>
      <div
        className="sc-AxhUy ihriO"
      >
        <span />
      </div>
      <div>
        <div
          className="sc-AxirZ sc-AxiKw fAiBCP"
        >
          mfa.phoneNumber.remove.explain
        </div>
        <form
          className="sc-fzqBZW hrtIKw"
          noValidate={true}
          onSubmit={[Function]}
        >
          <div
            className="sc-fzoLsD mtFrt"
          >
            <label
              className="sc-fzozJi dEjaXT"
              htmlFor="phone_number"
            >
              phoneNumber
            </label>
            <input
              className="sc-fzpans cUAEYx"
              data-testid="phone_number"
              id="phone_number"
              name="phone_number"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="phoneNumber"
              required={true}
              title="phoneNumber"
              type="tel"
              value=""
            />
          </div>
          <button
            className="sc-fzokOt iaSrde"
            data-testid="submit"
            disabled={false}
            type="submit"
          >
            mfa.remove.phoneNumber
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot mfaCredentials no intro 1`] = `
<div
  className="sc-Axmtr jBZtfl"
>
  <div>
    <div
      className="sc-fzqNJr kkyjJK"
    >
      <div>
        <form
          className="sc-fzqBZW hrtIKw"
          noValidate={true}
          onSubmit={[Function]}
        >
          <button
            className="sc-fzokOt iaSrde"
            data-testid="submit"
            disabled={false}
            type="submit"
          >
            mfa.register.email
          </button>
        </form>
      </div>
      <div
        className="sc-AxhUy ihriO"
      >
        <span />
      </div>
      <div>
        <form
          className="sc-fzqBZW hrtIKw"
          noValidate={true}
          onSubmit={[Function]}
        >
          <div
            className="sc-fzoLsD mtFrt"
          >
            <label
              className="sc-fzozJi dEjaXT"
              htmlFor="phone_number"
            >
              phoneNumber
            </label>
            <input
              className="sc-fzpans cUAEYx"
              data-testid="phone_number"
              id="phone_number"
              name="phone_number"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="phoneNumber"
              required={true}
              title="phoneNumber"
              type="tel"
              value=""
            />
          </div>
          <button
            className="sc-fzokOt iaSrde"
            data-testid="submit"
            disabled={false}
            type="submit"
          >
            mfa.register.phoneNumber
          </button>
        </form>
      </div>
    </div>
    <div
      className="sc-fzqNJr kkyjJK"
    >
      <div>
        <form
          className="sc-fzqBZW hrtIKw"
          noValidate={true}
          onSubmit={[Function]}
        >
          <button
            className="sc-fzokOt iaSrde"
            data-testid="submit"
            disabled={false}
            type="submit"
          >
            mfa.remove.email
          </button>
        </form>
      </div>
      <div
        className="sc-AxhUy ihriO"
      >
        <span />
      </div>
      <div>
        <form
          className="sc-fzqBZW hrtIKw"
          noValidate={true}
          onSubmit={[Function]}
        >
          <div
            className="sc-fzoLsD mtFrt"
          >
            <label
              className="sc-fzozJi dEjaXT"
              htmlFor="phone_number"
            >
              phoneNumber
            </label>
            <input
              className="sc-fzpans cUAEYx"
              data-testid="phone_number"
              id="phone_number"
              name="phone_number"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="phoneNumber"
              required={true}
              title="phoneNumber"
              type="tel"
              value=""
            />
          </div>
          <button
            className="sc-fzokOt iaSrde"
            data-testid="submit"
            disabled={false}
            type="submit"
          >
            mfa.remove.phoneNumber
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;
